--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "telemetry.enableTelemetry": false,
+    "telemetry.enableCrashReporter": false,
     "files.trimTrailingWhitespace": true,
     "explorer.confirmDelete": false,
     "explorer.confirmDragAndDrop": false,
