--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -7,6 +7,9 @@
     "[javascript]": {
         "editor.tabSize": 2
     },
+    "[javascriptreact]": {
+        "editor.tabSize": 2
+    },
     "vim.leader": ",",
     "vim.handleKeys": {
         "<C-a>": false,
